Add solarsystem3 files

--- a/new_folder/solarsystem.css
+++ b/new_folder/solarsystem.css
@@ -64,6 +64,18 @@ body{
     background-color: #2a6cff;
     
 }
+
+.mars{
+    width: 300px;
+    height: 330px;
+    animation-duration: 3600s;
+}
+.mars .planet{
+    width: 24px;
+    height: 24px;
+    background-color: #d20c0c;
+    
+}
 @keyframes rotate {
     from{
         transform: translate( -50%, -50% )
